--- a/index.html
+++ b/index.html
@@ -3,11 +3,130 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="./styles/normalize.css" rel="stylesheet"/>
+  <link href="./styles/style.css" rel="stylesheet"/>
   <title>Научиться учиться</title>
 </head>
 <body>
   <div class="page">
-
+    <header class="header">
+      <div class="logo logo_place_header">
+        <img src="./images/logo_place_header.svg" alt="Логотип Яндекс Практикум"/>
+      </div>
+      <h1 class="header__title">Научиться <br/>учиться</h1>
+      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? 
+      <a class="header__link" href="#">Узнать 	&rarr;</a>
+      </p>
+      <img class="header__main-illustration" src="./images/header-image.png" alt="Ученики"/>
+      <div class="header__square-pic"></div>
+    </header>
+    <main class="content">
+      <section class="description">
+        <div class="two-columns">
+          <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">Ни в школе, ни в институте не учат тому, как правильно изучать материал.
+              Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания.
+              Зубрежка быстро выветривается и не приносит пользы.
+            </p>
+            <p class="two-columns__paragraph two-columns__paragraph_space_top_bottom"><span class="span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+            <p class="two-columns__paragraph">Конкретные техники и упражнения помогаюи изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+          </div>
+        </div>
+      </section>
+      <section class="digits">
+        <h2 class="section-title">Цифры и факты</h2>
+        <h3 class="section-subtitle">Про учебу и мозг</h3>
+        <ul class="table">
+          <li class="table__cell">
+            <span class="table__heading">86 миллиардов</span>
+            <p class="table__text">Число нейронов в мозге человека</p>
+          </li>
+          <li class="table__cell">
+            <span class="table__heading">2,1 миллиарда</span>
+            <p class="table__text">Число нуждающихся в повышении квалификации</p>
+            <p class="table__text">Всемирный банк, 2017</p>
+          </li>
+          <li class="table__cell">
+            <span class="table__heading">1000 терабайт</span>
+            <p class="table__text">Объем памяти человека</p>
+          </li>
+          <li class="table__cell">
+            <span class="table__heading">500 триллионов</span>
+            <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+          </li>
+          <li class="table__cell">
+            <span class="table__heading">420 миллионов</span>
+            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+          </li>
+          <li class="table__cell">
+            <span class="table__heading">17-20 лет</span>
+            <p class="table__text">Пик обучаемости</p>
+          </li>
+          <li class="table__cell">
+            <span class="table__heading">1885 год</span>
+            <p class="table__text">Открытие кривой забывания</p>
+          </li>
+          <li class="table__cell">
+            <span class="table__heading">1889 год</span>
+            <p class="table__text">Открытие условного рефлекса</p>
+          </li>
+        </ul>
+      </section>
+      <section class="feynman">
+        <h2 class="feynman__title">Метод<br/> Феймана</h2>
+        <p class="feynman__subtitle">от Джоша Кауфмана</p>
+        <a href="#" class="feynman__link">Подробнее	&rarr;</a>
+      </section>
+      <section class="kaufman">
+        <h2 class="section-title_theme_dark">Принципы обучения</h2>
+        <h3 class="section-subtitle_theme_dark">от Джоша Кауфмана</h3>
+        <ul class="table table_theme_dark">
+          <li class="table__cell_theme_dark">
+            <span class="table__heading_theme_dark">1</span>
+            <p class="table__text_theme_dark">Выберите привлекательный проект.</p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <span class="table__heading_theme_dark">2</span>
+            <p class="table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <span class="table__heading_theme_dark">3</span>
+            <p class="table__text_theme_dark">Определите целевой уровень мастерства.</p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <span class="table__heading_theme_dark">4</span>
+            <p class="table__text_theme_dark">Разбейте навык на элементы.</p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <span class="table__heading_theme_dark">5</span>
+            <p class="table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <span class="table__heading_theme_dark">6</span>
+            <p class="table__text_theme_dark">Устраните препятствия для занятий.</p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <span class="table__heading_theme_dark">7</span>
+            <p class="table__text_theme_dark">Выделите специальное время для занятий.</p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <span class="table__heading_theme_dark">8</span>
+            <p class="table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <span class="table__heading_theme_dark">9</span>
+            <p class="table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <span class="table__heading_theme_dark">10</span>
+            <p class="table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
+          </li>
+        </ul>
+        <img class="kaufman__triangle" src="./images/kaufman-triangle.svg"/>
+      </section>
+    </main>
   </div>
+  <footer class="footer"></footer>
 </body>
 </html>
