последняя версия сдачи

--- a/index.html
+++ b/index.html
@@ -3,21 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="./styles/normalize.css" rel="stylesheet"/>
-  <link href="./styles/style.css" rel="stylesheet"/>
+  <link href="./styles/normalize.css" rel="stylesheet">
+  <link href="./styles/style.css" rel="stylesheet">
   <title>Научиться учиться</title>
 </head>
 <body>
   <div class="page">
     <header class="header">
       <div class="logo logo_place_header">
-        <img src="./images/logo_place_header.svg" alt="Логотип Яндекс Практикум"/>
+        <img src="./images/logo_place_header.svg" alt="Логотип Яндекс Практикум">
       </div>
-      <h1 class="header__title">Научиться <br/>учиться</h1>
-      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? 
-      <a class="header__link" href="#">Узнать 	&rarr;</a>
-      </p>
-      <img class="header__main-illustration" src="./images/header-image.png" alt="Ученики"/>
+      <h1 class="header__title">Научиться <br>учиться</h1>
+      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="header__link" href="#">Узнать &rarr;</a></p>
+      <img class="header__main-illustration" src="./images/header-image.png" alt="Ученики">
       <div class="header__square-pic"></div>
     </header>
     <main class="content">
@@ -29,7 +27,7 @@
               Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания.
               Зубрежка быстро выветривается и не приносит пользы.
             </p>
-            <p class="two-columns__paragraph two-columns__paragraph_space_top_bottom"><span class="span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+            <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
             <p class="two-columns__paragraph">Конкретные техники и упражнения помогаюи изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
           </div>
         </div>
@@ -74,9 +72,9 @@
         </ul>
       </section>
       <section class="feynman">
-        <h2 class="feynman__title">Метод<br/> Феймана</h2>
+        <h2 class="feynman__title">Метод<br> Феймана</h2>
         <p class="feynman__subtitle">от Джоша Кауфмана</p>
-        <a href="#" class="feynman__link">Подробнее	&rarr;</a>
+        <a href="#" class="feynman__link">Подробнее&rarr;</a>
       </section>
       <section class="kaufman">
         <h2 class="section-title_theme_dark">Принципы обучения</h2>
@@ -123,10 +121,30 @@
             <p class="table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </li>
         </ul>
-        <img class="kaufman__triangle" src="./images/kaufman-triangle.svg"/>
+        <!--<img class="kaufman__triangle" src="./images/kaufman-triangle.svg"/>-->
+        <div class="kaufman__triangle"></div>
       </section>
     </main>
+    <footer class="footer">
+      <div class="footer__columns">
+        <div class="footer__column_content_copyright">
+          <img src="./images/logo_place_footer.svg" class="logo logo_place_footer" alt="Логотип ЯндексПрактикум">
+          <p class="footer__author">&copy; Виктор Абанькин</p>
+        </div>
+        <ul class="footer__column_content_info">
+          <li class="footer__column-heading">О Практикуме</li>
+          <li class="footer__column-links"><a class="footer__column-link" href="#">Главная</a></li>
+          <li class="footer__column-links"><a class="footer__column-link" href="#">Концепция</a></li>
+          <li class="footer__column-links"><a class="footer__column-link" href="#">Наставники</a></li>
+        </ul>
+        <ul class="footer__column_content_social">
+          <li class="footer__column-heading">Соцсети</li>
+          <li class="footer__column-links"><a class="footer__column-link" href="#"><img class="footer__social-icon" src="./images/youtube-icon.svg" alt="YouTube">YouTube</a></li>
+          <li class="footer__column-links"><a class="footer__column-link" href="#"><img class="footer__social-icon" src="./images/vk_color_white.svg" alt="ВКонтакте">ВКонтакте</a></li>
+          <li class="footer__column-links"><a class="footer__column-link" href="#"><img class="footer__social-icon" src="./images/tiktok-icon.svg" alt="TikTok">TikTok</a></li>
+        </ul>
+      </div>
+    </footer>
   </div>
-  <footer class="footer"></footer>
 </body>
 </html>
