--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="logo logo_place_header">
         <img src="./images/logo_place_header.svg" alt="Логотип Яндекс Практикум">
       </div>
-      <h1 class="header__title">Научиться <br>учиться</h1>
+      <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="header__link" href="#">Узнать &rarr;</a></p>
       <img class="header__main-illustration" src="./images/header-image.png" alt="Ученики">
       <div class="header__square-pic"></div>
@@ -139,9 +139,9 @@
         </ul>
         <ul class="footer__column_content_social">
           <li class="footer__column-heading">Соцсети</li>
-          <li class="footer__column-links"><a class="footer__column-link" href="#"><img class="footer__social-icon" src="./images/youtube-icon.svg" alt="YouTube">YouTube</a></li>
+          <li class="footer__column-links"><a class="footer__column-link" href="#"><img class="footer__social-icon" src="./images/youtube-icon.svg" alt="Ютуб">YouTube</a></li>
           <li class="footer__column-links"><a class="footer__column-link" href="#"><img class="footer__social-icon" src="./images/vk_color_white.svg" alt="ВКонтакте">ВКонтакте</a></li>
-          <li class="footer__column-links"><a class="footer__column-link" href="#"><img class="footer__social-icon" src="./images/tiktok-icon.svg" alt="TikTok">TikTok</a></li>
+          <li class="footer__column-links"><a class="footer__column-link" href="#"><img class="footer__social-icon" src="./images/tiktok-icon.svg" alt="Тикток">TikTok</a></li>
         </ul>
       </div>
     </footer>
