удалила бр в 75 строке

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </ul>
       </section>
       <section class="feynman">
-        <h2 class="feynman__title">Метод<br> Феймана</h2>
+        <h2 class="feynman__title">Метод Феймана</h2>
         <p class="feynman__subtitle">от Джоша Кауфмана</p>
         <a href="#" class="feynman__link">Подробнее&rarr;</a>
       </section>
