--- a/index.html
+++ b/index.html
@@ -7,144 +7,143 @@
   <link href="./styles/style.css" rel="stylesheet">
   <title>Научиться учиться</title>
 </head>
-<body>
-  <div class="page">
-    <header class="header">
-      <div class="logo logo_place_header">
-        <img src="./images/logo_place_header.svg" alt="Логотип Яндекс Практикум">
+<body  class="page">
+  <header class="header">
+    <img class="logo logo_place_header"src="./images/logo_place_header.svg" alt="Логотип Яндекс Практикум">
+    <h1 class="header__title">Научиться учиться</h1>
+    <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="header__link" href="#">Узнать &rarr;</a></p>
+    <img class="header__main-illustration" src="./images/header-image.png" alt="Ученики">
+    <div class="header__square-pic"></div>
+  </header>
+  <main class="content">
+    <section class="description">
+      <div class="two-columns">
+        <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
+        <article class="two-columns__main-text">
+          <p class="two-columns__paragraph">Ни в школе, ни в институте не учат тому, как правильно изучать материал.
+            Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания.
+            Зубрежка быстро выветривается и не приносит пользы.
+          </p>
+          <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+          <p class="two-columns__paragraph">Конкретные техники и упражнения помогаюи изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+        </article>
       </div>
-      <h1 class="header__title">Научиться учиться</h1>
-      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="header__link" href="#">Узнать &rarr;</a></p>
-      <img class="header__main-illustration" src="./images/header-image.png" alt="Ученики">
-      <div class="header__square-pic"></div>
-    </header>
-    <main class="content">
-      <section class="description">
-        <div class="two-columns">
-          <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
-          <div class="two-columns__main-text">
-            <p class="two-columns__paragraph">Ни в школе, ни в институте не учат тому, как правильно изучать материал.
-              Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания.
-              Зубрежка быстро выветривается и не приносит пользы.
-            </p>
-            <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
-            <p class="two-columns__paragraph">Конкретные техники и упражнения помогаюи изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
-          </div>
-        </div>
-      </section>
-      <section class="digits">
-        <h2 class="section-title">Цифры и факты</h2>
-        <h3 class="section-subtitle">Про учебу и мозг</h3>
-        <ul class="table">
-          <li class="table__cell">
-            <span class="table__heading">86 миллиардов</span>
-            <p class="table__text">Число нейронов в мозге человека</p>
-          </li>
-          <li class="table__cell">
-            <span class="table__heading">2,1 миллиарда</span>
-            <p class="table__text">Число нуждающихся в повышении квалификации</p>
-            <p class="table__text">Всемирный банк, 2017</p>
-          </li>
-          <li class="table__cell">
-            <span class="table__heading">1000 терабайт</span>
-            <p class="table__text">Объем памяти человека</p>
-          </li>
-          <li class="table__cell">
-            <span class="table__heading">500 триллионов</span>
-            <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
-          </li>
-          <li class="table__cell">
-            <span class="table__heading">420 миллионов</span>
-            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
-          </li>
-          <li class="table__cell">
-            <span class="table__heading">17-20 лет</span>
-            <p class="table__text">Пик обучаемости</p>
-          </li>
-          <li class="table__cell">
-            <span class="table__heading">1885 год</span>
-            <p class="table__text">Открытие кривой забывания</p>
-          </li>
-          <li class="table__cell">
-            <span class="table__heading">1889 год</span>
-            <p class="table__text">Открытие условного рефлекса</p>
-          </li>
-        </ul>
-      </section>
-      <section class="feynman">
-        <h2 class="feynman__title">Метод Феймана</h2>
-        <p class="feynman__subtitle">от Джоша Кауфмана</p>
-        <a href="#" class="feynman__link">Подробнее&rarr;</a>
-      </section>
-      <section class="kaufman">
-        <h2 class="section-title_theme_dark">Принципы обучения</h2>
-        <h3 class="section-subtitle_theme_dark">от Джоша Кауфмана</h3>
-        <ul class="table table_theme_dark">
-          <li class="table__cell_theme_dark">
-            <span class="table__heading_theme_dark">1</span>
-            <p class="table__text_theme_dark">Выберите привлекательный проект.</p>
-          </li>
-          <li class="table__cell_theme_dark">
-            <span class="table__heading_theme_dark">2</span>
-            <p class="table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
-          </li>
-          <li class="table__cell_theme_dark">
-            <span class="table__heading_theme_dark">3</span>
-            <p class="table__text_theme_dark">Определите целевой уровень мастерства.</p>
-          </li>
-          <li class="table__cell_theme_dark">
-            <span class="table__heading_theme_dark">4</span>
-            <p class="table__text_theme_dark">Разбейте навык на элементы.</p>
-          </li>
-          <li class="table__cell_theme_dark">
-            <span class="table__heading_theme_dark">5</span>
-            <p class="table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
-          </li>
-          <li class="table__cell_theme_dark">
-            <span class="table__heading_theme_dark">6</span>
-            <p class="table__text_theme_dark">Устраните препятствия для занятий.</p>
-          </li>
-          <li class="table__cell_theme_dark">
-            <span class="table__heading_theme_dark">7</span>
-            <p class="table__text_theme_dark">Выделите специальное время для занятий.</p>
-          </li>
-          <li class="table__cell_theme_dark">
-            <span class="table__heading_theme_dark">8</span>
-            <p class="table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
-          </li>
-          <li class="table__cell_theme_dark">
-            <span class="table__heading_theme_dark">9</span>
-            <p class="table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
-          </li>
-          <li class="table__cell_theme_dark">
-            <span class="table__heading_theme_dark">10</span>
-            <p class="table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
-          </li>
-        </ul>
-        <!--<img class="kaufman__triangle" src="./images/kaufman-triangle.svg"/>-->
-        <div class="kaufman__triangle"></div>
-      </section>
-    </main>
-    <footer class="footer">
-      <div class="footer__columns">
-        <div class="footer__column_content_copyright">
-          <img src="./images/logo_place_footer.svg" class="logo logo_place_footer" alt="Логотип ЯндексПрактикум">
-          <p class="footer__author">&copy; Виктор Абанькин</p>
-        </div>
-        <ul class="footer__column_content_info">
-          <li class="footer__column-heading">О Практикуме</li>
-          <li class="footer__column-links"><a class="footer__column-link" href="#">Главная</a></li>
-          <li class="footer__column-links"><a class="footer__column-link" href="#">Концепция</a></li>
-          <li class="footer__column-links"><a class="footer__column-link" href="#">Наставники</a></li>
-        </ul>
-        <ul class="footer__column_content_social">
-          <li class="footer__column-heading">Соцсети</li>
-          <li class="footer__column-links"><a class="footer__column-link" href="#"><img class="footer__social-icon" src="./images/youtube-icon.svg" alt="Ютуб">YouTube</a></li>
-          <li class="footer__column-links"><a class="footer__column-link" href="#"><img class="footer__social-icon" src="./images/vk_color_white.svg" alt="ВКонтакте">ВКонтакте</a></li>
-          <li class="footer__column-links"><a class="footer__column-link" href="#"><img class="footer__social-icon" src="./images/tiktok-icon.svg" alt="Тикток">TikTok</a></li>
-        </ul>
+    </section>
+    <section class="digits">
+      <h2 class="section-title">Цифры и факты</h2>
+      <p class="section-subtitle">Про учебу и мозг</p>
+      <ul class="table">
+        <li class="table__cell">
+          <h3 class="table__heading">86 миллиардов</h3>
+          <p class="table__text">Число нейронов в мозге человека</p>
+        </li>
+        <li class="table__cell">
+          <h3 class="table__heading">2,1 миллиарда</h3>
+          <p class="table__text">Число нуждающихся в повышении квалификации</p>
+          <p class="table__text">Всемирный банк, 2017</p>
+        </li>
+        <li class="table__cell">
+          <h3 class="table__heading">1000 терабайт</h3>
+          <p class="table__text">Объем памяти человека</p>
+        </li>
+        <li class="table__cell">
+          <h3 class="table__heading">500 триллионов</h3>
+          <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+        </li>
+        <li class="table__cell">
+          <h3 class="table__heading">420 миллионов</h3>
+          <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+        </li>
+        <li class="table__cell">
+          <h3 class="table__heading">17-20 лет</h3>
+          <p class="table__text">Пик обучаемости</p>
+        </li>
+        <li class="table__cell">
+          <h3 class="table__heading">1885 год</h3>
+          <p class="table__text">Открытие кривой забывания</p>
+        </li>
+        <li class="table__cell">
+          <h3 class="table__heading">1889 год</h3>
+          <p class="table__text">Открытие условного рефлекса</p>
+        </li>
+      </ul>
+    </section>
+    <section class="feynman">
+      <h2 class="feynman__title">Метод Феймана</h2>
+      <p class="feynman__subtitle">от Джоша Кауфмана</p>
+      <a href="#" class="feynman__link">Подробнее&rarr;</a>
+    </section>
+    <section class="kaufman">
+      <h2 class="section-title_theme-dark">Принципы обучения</h2>
+      <h3 class="section-subtitle_theme-dark">от Джоша Кауфмана</h3>
+      <ul class="table table_theme-dark">
+        <li class="table__cell_theme-dark">
+          <h4 class="table__heading_theme-dark">1</h4>
+          <p class="table__text_theme-dark">Выберите привлекательный проект.</p>
+        </li>
+        <li class="table__cell_theme-dark">
+          <h4 class="table__heading_theme-dark">2</h4>
+          <p class="table__text_theme-dark">Сосредоточьтесь на каком-то одном навыке.</p>
+        </li>
+        <li class="table__cell_theme-dark">
+          <h4 class="table__heading_theme-dark">3</h4>
+          <p class="table__text_theme-dark">Определите целевой уровень мастерства.</p>
+        </li>
+        <li class="table__cell_theme-dark">
+          <h4 class="table__heading_theme-dark">4</h4>
+          <p class="table__text_theme-dark">Разбейте навык на элементы.</p>
+        </li>
+        <li class="table__cell_theme-dark">
+          <h4 class="table__heading_theme-dark">5</h4>
+          <p class="table__text_theme-dark">Приготовьте всё необходимое для занятий.</p>
+        </li>
+        <li class="table__cell_theme-dark">
+          <h4 class="table__heading_theme-dark">6</h4>
+          <p class="table__text_theme-dark">Устраните препятствия для занятий.</p>
+        </li>
+        <li class="table__cell_theme-dark">
+          <h4 class="table__heading_theme-dark">7</h4>
+          <p class="table__text_theme-dark">Выделите специальное время для занятий.</p>
+        </li>
+        <li class="table__cell_theme-dark">
+          <h4 class="table__heading_theme-dark">8</h4>
+          <p class="table__text_theme-dark">Создайте быстрые петли обратной связи.</p>
+        </li>
+        <li class="table__cell_theme-dark">
+          <h4 class="table__heading_theme-dark">9</h4>
+          <p class="table__text_theme-dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+        </li>
+        <li class="table__cell_theme-dark">
+          <h4 class="table__heading_theme-dark">10</h4>
+          <p class="table__text_theme-dark">Уделяйте внимание количеству и скорости.</p>
+        </li>
+      </ul>
+      <div class="kaufman__triangle"></div>
+    </section>
+  </main>
+  <footer class="footer">
+    <div class="footer__columns">
+      <div class="footer__column_content-copyright">
+        <img src="./images/logo_place_footer.svg" class="logo logo_place_footer" alt="Логотип ЯндексПрактикум">
+        <p class="footer__author">&copy; Виктор Абанькин</p>
       </div>
-    </footer>
-  </div>
+      <div class="footer__column_content-info">
+        <h4 class="footer__column-heading">О Практикуме</h4>
+        <nav class="footer__column-links">
+          <a class="footer__column-link" href="#">Главная</a>
+          <a class="footer__column-link" href="#">Концепция</a>
+          <a class="footer__column-link" href="#">Наставники</a>
+        </nav>
+      </div>
+      <div class="footer__column_content-social">
+        <h4 class="footer__column-heading">Соцсети</h4>
+        <nav class="footer__column-links">
+          <a class="footer__column-link" href="#"><img class="footer__social-icon" src="./images/youtube-icon.svg" alt="Ютуб">YouTube</a>
+          <a class="footer__column-link" href="#"><img class="footer__social-icon" src="./images/vk_color_white.svg" alt="ВКонтакте">ВКонтакте</a>
+          <a class="footer__column-link" href="#"><img class="footer__social-icon" src="./images/tiktok-icon.svg" alt="Тикток">TikTok</a>
+        </nav>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
