--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body  class="page">
   <header class="header">
-    <img class="logo logo_place_header"src="./images/logo_place_header.svg" alt="Логотип Яндекс Практикум">
+    <img class="logo logo_place_header" src="./images/logo_place_header.svg" alt="Логотип Яндекс Практикум">
     <h1 class="header__title">Научиться учиться</h1>
     <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="header__link" href="#">Узнать &rarr;</a></p>
     <img class="header__main-illustration" src="./images/header-image.png" alt="Ученики">
@@ -70,52 +70,52 @@
     </section>
     <section class="feynman">
       <h2 class="feynman__title">Метод Феймана</h2>
-      <p class="feynman__subtitle">от Джоша Кауфмана</p>
+      <p class="feynman__subtitle">Выучить и не забыть.</p>
       <a href="#" class="feynman__link">Подробнее&rarr;</a>
     </section>
     <section class="kaufman">
-      <h2 class="section-title_theme-dark">Принципы обучения</h2>
-      <h3 class="section-subtitle_theme-dark">от Джоша Кауфмана</h3>
-      <ul class="table table_theme-dark">
-        <li class="table__cell_theme-dark">
-          <h4 class="table__heading_theme-dark">1</h4>
-          <p class="table__text_theme-dark">Выберите привлекательный проект.</p>
+      <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
+      <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
+      <ul class="table table_theme_dark">
+        <li class="table__cell table__cell_theme_dark">
+          <h4 class="table__heading table__heading_theme_dark">1</h4>
+          <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
         </li>
-        <li class="table__cell_theme-dark">
-          <h4 class="table__heading_theme-dark">2</h4>
-          <p class="table__text_theme-dark">Сосредоточьтесь на каком-то одном навыке.</p>
+        <li class="table__cell table__cell_theme_dark">
+          <h4 class="table__heading table__heading_theme_dark">2</h4>
+          <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
         </li>
-        <li class="table__cell_theme-dark">
-          <h4 class="table__heading_theme-dark">3</h4>
-          <p class="table__text_theme-dark">Определите целевой уровень мастерства.</p>
+        <li class="table__cell table__cell_theme_dark">
+          <h4 class="table__heading table__heading_theme_dark">3</h4>
+          <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
         </li>
-        <li class="table__cell_theme-dark">
-          <h4 class="table__heading_theme-dark">4</h4>
-          <p class="table__text_theme-dark">Разбейте навык на элементы.</p>
+        <li class="table__cell table__cell_theme_dark">
+          <h4 class="table__heading able__heading_theme_dark">4</h4>
+          <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
         </li>
-        <li class="table__cell_theme-dark">
-          <h4 class="table__heading_theme-dark">5</h4>
-          <p class="table__text_theme-dark">Приготовьте всё необходимое для занятий.</p>
+        <li class="table__cell table__cell_theme_dark">
+          <h4 class="table__heading table__heading_theme_dark">5</h4>
+          <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
         </li>
-        <li class="table__cell_theme-dark">
-          <h4 class="table__heading_theme-dark">6</h4>
-          <p class="table__text_theme-dark">Устраните препятствия для занятий.</p>
+        <li class="table__cell table__cell_theme_dark">
+          <h4 class="table__heading table__heading_theme_dark">6</h4>
+          <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
         </li>
-        <li class="table__cell_theme-dark">
-          <h4 class="table__heading_theme-dark">7</h4>
-          <p class="table__text_theme-dark">Выделите специальное время для занятий.</p>
+        <li class="table__cell table__cell_theme_dark">
+          <h4 class="table__heading table__heading_theme_dark">7</h4>
+          <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
         </li>
-        <li class="table__cell_theme-dark">
-          <h4 class="table__heading_theme-dark">8</h4>
-          <p class="table__text_theme-dark">Создайте быстрые петли обратной связи.</p>
+        <li class="table__cell table__cell_theme_dark">
+          <h4 class="table__heading table__heading_theme_dark">8</h4>
+          <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
         </li>
-        <li class="table__cell_theme-dark">
-          <h4 class="table__heading_theme-dark">9</h4>
-          <p class="table__text_theme-dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+        <li class="table__cell table__cell_theme_dark">
+          <h4 class="table__heading table__heading_theme_dark">9</h4>
+          <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
         </li>
-        <li class="table__cell_theme-dark">
-          <h4 class="table__heading_theme-dark">10</h4>
-          <p class="table__text_theme-dark">Уделяйте внимание количеству и скорости.</p>
+        <li class="table__cell table__cell_theme_dark">
+          <h4 class="table__heading table__heading_theme_dark">10</h4>
+          <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
         </li>
       </ul>
       <div class="kaufman__triangle"></div>
@@ -123,11 +123,11 @@
   </main>
   <footer class="footer">
     <div class="footer__columns">
-      <div class="footer__column_content-copyright">
+      <div class="footer__column footer__column_content_copyright">
         <img src="./images/logo_place_footer.svg" class="logo logo_place_footer" alt="Логотип ЯндексПрактикум">
         <p class="footer__author">&copy; Виктор Абанькин</p>
       </div>
-      <div class="footer__column_content-info">
+      <div class="footer__column footer__column_content_info">
         <h4 class="footer__column-heading">О Практикуме</h4>
         <nav class="footer__column-links">
           <a class="footer__column-link" href="#">Главная</a>
@@ -135,7 +135,7 @@
           <a class="footer__column-link" href="#">Наставники</a>
         </nav>
       </div>
-      <div class="footer__column_content-social">
+      <div class="footer__column footer__column_content_social">
         <h4 class="footer__column-heading">Соцсети</h4>
         <nav class="footer__column-links">
           <a class="footer__column-link" href="#"><img class="footer__social-icon" src="./images/youtube-icon.svg" alt="Ютуб">YouTube</a>
