--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
     <h1 class="header__title">Научиться учиться</h1>
     <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="header__link" href="#">Узнать &rarr;</a></p>
     <img class="header__main-illustration" src="./images/header-image.png" alt="Ученики">
-    <div class="header__square-pic"></div>
+    <div class="header__square-pic rotation"></div>
   </header>
   <main class="content">
     <section class="description">
-      <div class="two-columns">
+      <article class="two-columns">
         <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
-        <article class="two-columns__main-text">
+        <div class="two-columns__main-text">
           <p class="two-columns__paragraph">Ни в школе, ни в институте не учат тому, как правильно изучать материал.
             Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания.
             Зубрежка быстро выветривается и не приносит пользы.
           </p>
           <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
           <p class="two-columns__paragraph">Конкретные техники и упражнения помогаюи изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
-        </article>
-      </div>
+        </div>
+      </article>
     </section>
     <section class="techniques">
       <h2 class="section-title">Техники обучения</h2>
@@ -62,19 +62,19 @@
     <section class="video">
       <h2 class="section-title">Видео нa TED</h2>
       <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
-      <div class="video__ifames">
-        <iframe class="iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <iframe class="iframe" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <div class="video__iframes">
+        <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
     </section>
     <section class="oakley">
-      <div class="two-columns">
+      <article class="two-columns">
         <h2 class="two-columns__brief">История Барбары Оакли.</h2>
-        <article class="two-columns__main-text">
+        <div class="two-columns__main-text">
           <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.
           </p>
-        </article>
-      </div>
+        </div>
+      </article>
     </section>
     <section class="feynman">
       <h2 class="feynman__title">Метод Феймана</h2>
@@ -105,6 +105,7 @@
         <li class="table__cell">
           <h3 class="table__heading">420 миллионов</h3>
           <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+          <p class="table__text">Всемирный банк, 2017</p>
         </li>
         <li class="table__cell">
           <h3 class="table__heading">17-20 лет</h3>
@@ -178,17 +179,17 @@
           <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
         </li>
       </ul>
-      <div class="kaufman__triangle"></div>
+      <div class="kaufman__triangle rotation"></div>
     </section>
     <section class="resources">
       <h2 class="section-title">Полезные ресурсы</h2>
-      <h3 class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</h3>
-      <nav class="resources__logo">
-        <a href="#" class="resources__logo-zone"><img src="./images/logo/resources-arzamas.svg" alt="Логотип Арзамас"></a>
-        <a href="#" class="resources__logo-zone"><img src="./images/logo/resources-n1.svg" alt="Логотип Н1"></a>
-        <a href="#" class="resources__logo-zone"><img src="./images/logo/resources-strelka.svg" alt="Логотип Стрелка"></a>
-        <a href="#" class="resources__logo-zone"><img src="./images/logo/resources-polka.svg" alt="Логотип Полка"></a>
-      </nav>
+      <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+      <div class="resources__logo-zone">
+        <a href="#" class="resources__link"><img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="Логотип Арзамас"></a>
+        <a href="#" class="resources__link"><img class="resources__logo" src="./images/logo/resources-n1.svg" alt="Логотип Н1"></a>
+        <a href="#" class="resources__link"><img class="resources__logo" src="./images/logo/resources-strelka.svg" alt="Логотип Стрелка"></a>
+        <a href="#" class="resources__link"><img class="resources__logo" src="./images/logo/resources-polka.svg" alt="Логотип Полка"></a>
+      </div>
     </section>
   </main>
   <footer class="footer">
